-----------
v4.2.14-git
-----------

[jan] Fix exporting multiple tags to vNote CATEGORIES (Bug #14057).


-------
v4.2.13
-------

[mjr] Fix saving sync preference when no default notepad exists (Bug #14585).
[mjr] Fix potential infinite recursion in Mnemo_Api::listBy() due to corrupt
      preference values.


-------
v4.2.12
-------

[jan] Update German translation.


-------
v4.2.11
-------

[jan] Update Portuguese translation.
[jan] Update Basque translation.
[mjr] Require Horde_Perms::DELETE for including a notebook as sync-able.


-------
v4.2.10
-------

[jan] Update Greek translation (Limperis Antonis <limperis@cti.gr>).


------
v4.2.9
------

[jan] Use access rules compatible with both Apache 2.2 and 2.4.
[mjr] Fix fatal error when removing notepads in certain cases.


------
v4.2.8
------

[jan] Update Italian translation.
[mjr] Remove object reference from Content when object is deleted (Bug #14112).
[mjr] Remove tags from Content when tagged object is deleted (Bug #14112).


------
v4.2.7
------

[jan] Update Italian translation.
[jan] Update Czech translation.
[mjr] Fix inconsistent handling of incoming HTML notes from ActiveSync clients
      (Bug #14045).
[mjr] Allow more reasonable length of description field to interop better with
      synchronized clients (Bug #14041).


------
v4.2.6
------

[mjr] Fix using custom SQL configuration parameters.


------
v4.2.5
------

[mjr] Fix fatal error when using Mnemo without Nag installed.


------
v4.2.4
------

[jan] Don't list notepads without SHOW permissions (Bug #13838).
[jan] Fix using custom SQL driver configuration.
[mjr] Fix truncation of body text when synchronizing over EAS when no
      truncationsize option is sent from client (Bug #13755).


------
v4.2.3
------

[jan] SECURITY: Fix permission check when editing notes (found by Christopher
      Neuhaus <cne@ruhrverband.de>).
[mms] Added ability to link to note via API.


------
v4.2.2
------

[mjr] Fix adding new notepads via the API.